numbat/tests/snapshots/prelude_and_examples__name_resolution_error_snapshots@unit_clashes_with_variables.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/name_resolution_error/unit_clashes_with_variables.nbt
---
error: identifier clash in definition
   ┌─ Module 'units::si', File [PRELUDE_FILE]:10:6
   │
10 │ unit metre: Length
   │      ----- Previously defined here
   │
   ┌─ <internal:3>:1:5
   │
 1 │ let meter = 2
   │     ^^^^^ identifier is already in use
